--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
   width: 20%;
   float: left;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url(../images/carousel/carousel1.jpg) no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../images/carousel/carousel1.jpg") no-repeat center/cover;
 }
 
 #slider .figure #carousel1 h1 {
@@ -72,7 +72,7 @@
   width: 20%;
   float: left;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../images/carousel/carousel2.jpg) no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../images/carousel/carousel2.jpg") no-repeat center/cover;
 }
 
 #slider .figure #carousel2 h1 {
@@ -119,7 +119,7 @@
   width: 20%;
   float: left;
   height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../images/carousel/carousel3.jpg) no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../images/carousel/carousel3.jpg") no-repeat center/cover;
 }
 
 #slider .figure #carousel3 h1 {
